--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">tutorial</string>
+    <string name="action_add_new">Add new</string>
+    <string name="action_skip">Skip</string>
 </resources>
