--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
         <item>Friday</item>
         <item>Saturday</item>
     </string-array>
+    <string name="search_hint">Search class...</string>
 </resources>
