--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,11 +16,15 @@
         <item>Saturday</item>
     </string-array>
     <string name="search_hint">Search class...</string>
-    <string name="title_activity_test">test</string>
+    <string name="title_activity_test">DukeTutor</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Title_search">Search</string>
+    <string name="Title_message">Message</string>
+    <string name="Title_application">Application</string>
+    <string name="Title_me">Me</string>
 </resources>
