--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="Title_message">Message</string>
     <string name="Title_application">Application</string>
     <string name="Title_me">Me</string>
+    <string name="applied_session">Applied Session:</string>
 </resources>
