--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="message_received">Message Received:</string>
     <string name="session_edit">Edit</string>
     <string name="session_apply">Apply</string>
+    <string name="session_detail_feedback">Feedback</string>
 </resources>
