--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="session_edit">Edit</string>
     <string name="session_apply">Apply</string>
     <string name="session_detail_feedback">Feedback</string>
+    <string name="feedback_session">Feedback for completed sessions:</string>
 </resources>
